# myglrenderer

./: 1.txt  CMakeLists.txt  CMakeSettings.json
myglrenderer/: CMakeLists.txt
myglrenderer/res/: .gitignore
myglrenderer/res/nahida/: nahida.mtl  nahida.obj2
myglrenderer/res/shaders/: test.frag  test.vert
myglrenderer/src/: CMakeLists.txt  glad_src_code.c  main.cpp
myglrenderer/src/common/: CMakeLists.txt  defs.h  global.h  image.h  utility.cpp  utility.h
myglrenderer/src/controller/: CMakeLists.txt  CameraController.cpp  CameraController.h
myglrenderer/src/device/: CMakeLists.txt
myglrenderer/src/device/camera/: Camera.cpp  Camera.h
myglrenderer/src/device/model/: Model.cpp  Model.h
myglrenderer/src/device/model/material/: Texture.cpp  Texture.h
myglrenderer/src/device/model/mesh/: CommonMesh.cpp  CommonMesh.h  CommonMeshEx.cpp  CommonMeshEx.h  Mesh.cpp  Mesh.h
myglrenderer/src/device/shader/: Shader.cpp  Shader.h
myglrenderer/src/loader/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.h  ShaderLoader.cpp  ShaderLoader.h
myglrenderer/src/manager/: CMakeLists.txt  CanvasManager.cpp  CanvasManager.h  MeshManager.cpp  MeshManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
myglrenderer/src/renderer/: CMakeLists.txt  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h
myglrenderer/src/renderer/pipeline/: CommonPipeline.cpp  CommonPipeline.h  RenderPipeline.h
myglrenderer/src/window/: Window.cpp  Window.h
