
add_executable (myglrenderer "main.cpp" "glad_src_code.c" )
target_link_libraries(myglrenderer PRIVATE device)
target_link_libraries(myglrenderer PRIVATE common)
target_link_libraries(myglrenderer PRIVATE manager)
target_link_libraries(myglrenderer PRIVATE renderer)
target_link_libraries(myglrenderer PRIVATE controller)
target_link_libraries(myglrenderer PRIVATE loader)
target_link_libraries(myglrenderer PRIVATE window)
add_subdirectory("device")
add_subdirectory("common")
add_subdirectory("manager")
add_subdirectory("renderer")
add_subdirectory("controller")
add_subdirectory("loader")
add_subdirectory("window")